--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <h1>Сламжан Ерәлім</h1>
  
     <div class="pictures">
-    	<img src="img/Photo1.jpeg" width="200">
-	<img src="img/Photo2.jpeg" width="200">
+    	<img src="Photo1.jpeg" width="200">
+	<img src="Photo2.jpeg" width="200">
     </div>
  
     <div id="bio" class="content active">
